Adding new tasks in the test

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/categoryTypeListFragment">
+    app:startDestination="@id/tasksFragment">
+
+    <fragment
+        android:id="@+id/tasksFragment"
+        android:name="com.example.zeldaapp.tasks.TasksFragment"
+        tools:layout="@layout/fragment_tasks">
+        <action
+            android:id="@+id/goToCategoryTypeList"
+            app:destination="@id/categoryTypeListFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/categoryTypeListFragment"
